<resources>
    <string name="app_name">EAVJ</string>
    <string name="emailHint">Enter your email</string>
    <string name="passwordHint">Enter your password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign up</string>
    <string name="signUpText">Don\'t have an account? Sign in here</string>
    <string name="loginText">Already registered? Login here</string>
    <string name="createTrip">Create your own trip plan</string>
    <string name="visitingPlacesList">View visiting places list</string>
    <string name="tripIdeas">Trip Ideas</string>
    <string name="tripList">My trips</string>
    <string name="tripName">Trip name</string>
    <string name="viewTrip">View trip</string>
    <string name="editTrip">Edit trip</string>
    <string name="deleteTrip">DeleteTrip</string>
    <string name="manageCountries">Manage countries</string>
    <string name="manageCities">Manage cities</string>
    <string name="manageVisitingPlaces">Manage visiting places</string>
    <string name="searchFriend">Need a friend for a trip?</string>
    <string name="manageUsers">Manage users</string>
    <string name="saveTripItem">Save trip item</string>
    <string name="viewInMap"> View in map</string>
    <string name="budget"> Budget</string>
    <string name="updateTrip"> Update trip</string>
    <string name="manageComments">Manage comments</string>
    <string name="title_activity_trip_map">Map</string>
    <string name="chooseTripItemPlaces">Choose places to visit</string>
    <string name="selectedVisitingPlaces">Selected visiting places</string>
    <string name="fr">FR</string>
    <string name="france">France</string>
    <string name="_2018_06_15">2018.06.15</string>
    <string name="title_activity_edit_country">EditCountryActivity</string>
    <string name="google_maps_API_key">AIzaSyAaY7M85BioMP2N0vUI-sENwk5ZuH5p2DU</string>
    <string name="chatHintMessage">Message...</string>
</resources>
