<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="main.eavj.MainActivity"
    ><!--android:background="@drawable/bc">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:onClick="openCreateTripWindow"

            android:textColor="#FFFFFF"
            android:layout_height="60dp"
            android:background="@drawable/button_shape"
            android:shadowColor="#184CA8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"

            android:text="@string/createTrip" />

        <Button
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:onClick="openVisitingPlaceListWindow"

            android:textColor="#FFFFFF"
            android:layout_height="60dp"
            android:background="@drawable/button_shape"
            android:shadowColor="#184CA8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"

            android:text="@string/visitingPlacesList" />

        <Button
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#FFFFFF"
            android:layout_height="60dp"
            android:background="@drawable/button_shape"
            android:shadowColor="#184CA8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:onClick="openTripListWindow"
            android:text="@string/tripList" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#FFFFFF"
            android:layout_height="60dp"
            android:background="@drawable/button_shape"
            android:shadowColor="#184CA8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:onClick="openFriendSearchWindow"
            android:text="@string/searchFriend" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
