<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="main.eavj.LoginActivity"
    ><!--android:background="@drawable/bc">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:gravity="center"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="26dp">


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="Plan Your Trip"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColorHint="@color/colorAccent" />

        <Button
            android:id="@+id/loginBtnLogin"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_margin="15dp"
            android:background="@drawable/button_shape"
            android:fontFamily="sans-serif"
            android:shadowColor="#184CA8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/login"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/loginSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:text="@string/signUpText"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />

        <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
