<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tripTitle"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="Title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateFrom"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Date from" />

            <TextView
                android:id="@+id/dateTo"
                android:layout_width="197dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Date To" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/selectedVisitingPlaces" />
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/selectedPlaces"></ListView>
        <Button
            android:id="@+id/viewMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewInMap" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/budget" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>