<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="main.eavj.SignUpActivity"
    ><!--android:background="@drawable/bc">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:gravity="center"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="Plan Your Trip"
                android:textSize="30sp"  />

            <EditText
                android:id="@+id/signUpEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:paddingBottom="15dp"
                android:textColorHint="@color/colorAccent" />

            <EditText
                android:id="@+id/signUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:textColorHint="@color/colorAccent" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_gravity="center"
                android:text="@string/signUp"
                android:textAllCaps="false"
                android:fontFamily="sans-serif"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_margin="15dp"
                android:background="@drawable/button_shape"
                android:shadowColor="#184CA8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/signUpLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="Already have an account? Login"
                android:textAlignment="center"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorAccent" />

            <ProgressBar
                android:id="@+id/signUpProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>

</android.support.constraint.ConstraintLayout>
